added new contracts

--- a/Web/Pharmacy/Website.html
+++ b/Web/Pharmacy/Website.html
@@ -1,5 +1,5 @@
 <!-- #######  YAY, I AM THE SOURCE EDITOR! #########-->
-<div id="headerWrapper" class="header-wrapper"><nav class="navbar navbar-expand-md"><a class="navbar-brand" href="https://www.uspharmacist.com/"><img src="https://www.uspharmacist.com/Content/Images/USP_LOGO_2019.png" /></a>
+<div id="headerWrapper" class="header-wrapper"><nav class="navbar navbar-expand-md">
 <div id="navbarsExampleDefault" class="collapse navbar-collapse no-transition">
 <ul class="navbar-nav">
 <li class="nav-item dropdown"><a id="dropdown01" class="nav-link" href="https://www.uspharmacist.com/#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pharmacy Practice</a></li>
@@ -9,36 +9,13 @@
 <li class="nav-item dropdown"><a id="dropdown03" class="nav-link" href="https://www.uspharmacist.com/#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Publications</a></li>
 <li class="nav-item"><a class="nav-link" href="https://www.uspharmacist.com/conferences">Conference Coverage</a></li>
 <li class="nav-item"><a class="nav-link" href="https://journalce.powerpak.com/">Continuing Education</a></li>
+<li class="nav-item">
+<div class="social">&nbsp;</div>
+<div class="apps"><a href="https://play.google.com/store/apps/details?id=com.USpharmacist.USpharmacist&amp;hl=en&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-Other-global-all-co-prtnr-ap-PartBadge-Mar2515-1" target="_blank" rel="noopener"><img src="https://www.uspharmacist.com/Images/google-play-logo.png" alt="Get it on Google Play" /></a><a href="https://itunes.apple.com/us/app/us-pharmacists/id522827062?mt=8" target="_blank" rel="noopener"><img src="https://www.uspharmacist.com/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="" /></a></div>
+</li>
 </ul>
 </div>
-<div class="navbarsub"><a class="navbarsub-link subscribe" title="Subscribe" href="https://www.uspharmacist.com/subscriptions">Subscribe</a></div>
-<div id="searchboxHolder">
-<div id="___gcse_0">
-<div class="gsc-control-searchbox-only gsc-control-searchbox-only-en" dir="ltr"><form class="gsc-search-box gsc-search-box-tools" accept-charset="utf-8">
-<table class="gsc-search-box" cellspacing="0" cellpadding="0">
-<tbody>
-<tr>
-<td class="gsc-input">
-<div id="gsc-iw-id1" class="gsc-input-box">
-<table id="gs_id50" class="gstl_50 gsc-input" cellspacing="0" cellpadding="0">
-<tbody>
-<tr>
-<td id="gs_tti50" class="gsib_a"><input id="gsc-i-id1" class="gsc-input" dir="ltr" title="search" spellcheck="false" autocomplete="off" name="search" size="10" type="text" /></td>
-<td class="gsib_b">
-<div id="gs_st50" class="gsst_b" dir="ltr">&nbsp;</div>
-</td>
-</tr>
-</tbody>
-</table>
-</div>
-</td>
-<td class="gsc-search-button">&nbsp;</td>
-</tr>
-</tbody>
-</table>
-</form></div>
-</div>
-</div>
+<div class="navbarsub"><img src="https://thumbs.dreamstime.com/b/paciente-masculino-de-consulta-do-doutor-no-escrit%C3%B3rio-113022660.jpg" alt="" /></div>
 </nav>
 <div class="bg-warning p-2 h4 border border-dark text-center">&nbsp;<a href="https://www.uspharmacist.com/article/covid19">COVID-19 Resources&nbsp;</a></div>
 <div class="ban ban-728x90">
@@ -58,7 +35,6 @@
 <div class="card card-highlight "><a class="card-thumbnail" href="https://www.uspharmacist.com/article/managing-social-anxiety-disorder"><img class="card-img-top" src="https://www.uspharmacist.com/CMSImagesThumbnails/2021/05/Social-Anxiety-Disorder_LG.jpg" alt="" /></a>
 <div class="card-body">
 <div class="card-topic"><a href="https://www.uspharmacist.com/topic/mental-health">MENTAL HEALTH</a></div>
-<h4 class="card-title"><a href="https://www.uspharmacist.com/article/managing-social-anxiety-disorder">Managing Social Anxiety Disorder</a></h4>
 This condition involving intense fear of being observed or judged in social situations affects quality of life by impacting relationships, work or school, and social activities.</div>
 </div>
 <div class="card  ">
@@ -108,7 +84,6 @@ This condition involving intense fear of being observed or judged in social situ
 <div class="row d-print-none">
 <div class="col-12 col-md">
 <div class="social"><a id="fb" class="social-icon" href="https://www.facebook.com/USPharm" target="_blank" rel="noopener"><img src="https://www.uspharmacist.com/Content/Images/fb-circle.png" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a id="tt" class="social-icon" href="https://twitter.com/USPharmacist" target="_blank" rel="noopener"><img src="https://www.uspharmacist.com/Content/Images/tt-circle.png" /></a></div>
-<div class="apps"><a href="https://play.google.com/store/apps/details?id=com.USpharmacist.USpharmacist&amp;hl=en&amp;utm_source=global_co&amp;utm_medium=prtnr&amp;utm_content=Mar2515&amp;utm_campaign=PartBadge&amp;pcampaignid=MKT-Other-global-all-co-prtnr-ap-PartBadge-Mar2515-1" target="_blank" rel="noopener"><img src="https://www.uspharmacist.com/Images/google-play-logo.png" alt="Get it on Google Play" /></a><a href="https://itunes.apple.com/us/app/us-pharmacists/id522827062?mt=8" target="_blank" rel="noopener"><img src="https://www.uspharmacist.com/images/Download_on_the_App_Store_Badge_US-UK_135x40.svg" alt="" /></a></div>
 </div>
 </div>
 </div>
